<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="330dp"
    android:layout_height="420dp"
    android:layout_gravity="center"
    android:background="@drawable/dialog_bg">

    <TextView
        android:id="@+id/dialog_date_selector_tv_title"
        style="@style/PopupTitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_picker_title"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_marginTop="@dimen/little_margin"
        android:id="@+id/dialog_date_selector_tv_sub"
        style="@style/SubtitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_picker_subtitle"
        app:layout_constraintStart_toStartOf="@+id/dialog_date_selector_tv_title"
        app:layout_constraintTop_toBottomOf="@+id/dialog_date_selector_tv_title" />

    <DatePicker
        android:id="@+id/dialog_date_selector_dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:layout_marginTop="@dimen/default_margin"
        android:theme="@style/CustomDatePicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_date_selector_tv_sub" />


    <Button
        android:id="@+id/dialog_date_selector_btn_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/default_margin"
        android:padding="@dimen/little_margin"
        android:text="@string/date_picker_confirm_button_text"
        style="@style/ButtonTextStyle"
        android:background="@color/darkPurple"
        app:layout_constraintTop_toBottomOf="@+id/dialog_date_selector_dp" />


</androidx.constraintlayout.widget.ConstraintLayout>