<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/fragment_home_tv_sub"
        style="@style/SubtitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/little_margin"
        android:text="@string/home_sub"
        android:layout_marginStart="@dimen/default_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/fragment_home_cv_sign_image_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/lightBlack"
        app:cardCornerRadius="100dp"
        app:cardElevation="7dp"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_home_tv_sub">

        <ImageView
            android:id="@+id/fragment_home_iv_sign_image"

            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:padding="30dp"
            android:src="@drawable/ic_pending"
            app:tint="@color/lightPurple"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/fragment_home_tv_sign_name"
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans"
        android:text="@string/item_sign_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_home_cv_sign_image_bg" />

    <TextView
        android:id="@+id/fragment_home_tv_sub_2"
        android:text="@string/home_sub_2"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/SubtitleTextStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_home_tv_sign_name" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_home_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/default_margin"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_home_tv_sub_2" />

</androidx.constraintlayout.widget.ConstraintLayout>